--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "jedi-language-server>=0.45.1",
+    "ping3>=5.1.5",
     "pyroute2>=0.9.4",
 ]
